# fast-gov-uk

./: .gitignore  .readthedocs.yaml  README.md  app.py  main.py  pyproject.toml
.github/workflows/: create-release.yaml  publish-test.yaml
docs/: api.rst  conf.py  forms.md  index.rst
docs/design_system/: index.rst
docs/scaffolding/: cookies.rst  feedback.rst  forms.rst  index.rst  wizards.rst
fast_gov_uk/: __init__.py  core.py  demo.py  forms.py
fast_gov_uk/design_system/: __init__.py  components.py  contrib.py  inputs.py  navigation.py  pages.py  typography.py  utils.py
fast_gov_uk/tests/: app.py  conftest.py  test_core.py  test_demo.py  test_forms.py
fast_gov_uk/tests/design_system/: test_components.py  test_contrib.py  test_inputs.py  test_navigation.py  test_pages.py  test_typography.py
fast_gov_uk/tests/design_system/acceptance_tests/: test_components.py  test_navigation.py
